Add subfoldes for includes and implement dual background

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Croggle:About
+title: About
 ---
 
-{% capture intro %}{% include intro.markdown %}{% endcapture %}
+{% capture intro %}{% include markdown/intro.markdown %}{% endcapture %}
 {{ intro  | markdownify}}
