--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Croggle
 <ul class="posts">
 	{% for post in paginator.posts %}
 		<li>
-			{% include post.html %}
+			{% include partials/post.html %}
 		</li>
 	{% endfor %}
 </ul>
